login and logout functionality

--- a/src/app/pages/landing/components/main/main.component.html
+++ b/src/app/pages/landing/components/main/main.component.html
@@ -1,3 +1,14 @@
+<div class="top-section">
+    <div class="row text-center company-logo">
+        <img 
+            src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Star_Wars_Logo.svg" 
+            height="400" 
+            width="400" 
+            class="center-block img-responsive"
+            name="img-logo"
+        >
+    </div>
+</div>
 <landing-do-or-dont (isClicked)="getReport($event)"></landing-do-or-dont>
 <!-- report component-->
 <landing-report *ngIf="displayReport==true"></landing-report>
