--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -1,10 +1,9 @@
 <div class="top-section">
     <nav class="navbar navbar-inverse">
         <div class="container">
-          <div class="navbar-header">
-              <a class="navbar-brand" href="#">Demo</a>                         
+          <div class="navbar-header">              
+              <a class="navbar-brand" routerLink="/">Home</a>
             </div>
-
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li *ngIf="!isAuthenticated" routerLinkActive="active">
@@ -16,6 +15,14 @@
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
+                    <li routerLink="/" href="#" *ngIf="isAuthenticated" class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            {{ authUser.name }} <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                          <li><a href="#">My Profile</a></li>                        
+                        </ul>
+                      </li>
                     <li *ngIf="isAuthenticated">
                         <a style="cursor: pointer;" (click)="onLogout()">Logout</a>
                     </li>                    
