--- a/src/app/pages/login/components/main/main.component.html
+++ b/src/app/pages/login/components/main/main.component.html
@@ -7,27 +7,29 @@
       <input 
         ngModel 
         name="email" 
-        type="email" 
-        required 
-        email 
+        type="email"         
         class="form-control" 
         id="email"                 
         placeholder="Enter email"
-        #email="ngModel">
-      <small *ngIf="email!=valid && email.touched" id="emailError" class="form-text text-muted">Please enter valid email.</small>
+        #email="ngModel" 
+        required 
+        email 
+      >
+      <small *ngIf="!email.valid && email.touched" id="emailError" class="form-text text-muted">Please enter valid email.</small>
     </div>
     <div class="form-group">
       <label for="password">Password</label>
       <input 
         ngModel 
-        name="password" 
-        required 
+        name="password"         
         type="password" 
         class="form-control" 
         id="password" 
         placeholder="Password"
-        #password="ngModel">
-        <small *ngIf="password!=valid && password.touched" id="passwordError" class="form-text text-muted">Please enter password.</small>
+        #password="ngModel"
+        required 
+      >
+      <small *ngIf="!password.valid && password.touched" id="passwordError" class="form-text text-muted">Please enter password.</small>
     </div>            
     <button type="submit" class="btn btn-primary" [disabled]="!form.valid">Submit</button>
   </form>
