Implement ngRx entity for post listing

--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -20,6 +20,7 @@
                             {{ authUser.name }} <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
+                            <li><a routerLink="/timeline">Timeline</a></li>  
                           <li><a routerLink="/">My Profile</a></li>
                           <li><a style="cursor: pointer;" (click)="onLogout()">Logout</a></li>
                         </ul>                        
