--- a/src/app/pages/timeline/components/main/main.component.html
+++ b/src/app/pages/timeline/components/main/main.component.html
@@ -1,6 +1,6 @@
 <div class="well"> 
     <!-- TEXTBOX FOR NEW POST -->
-    <timeline-mypost *ngIf="isAuthenticated"></timeline-mypost>
+    <timeline-mypost (createPostRequest)="createPost($event)" *ngIf="isAuthenticated"></timeline-mypost>
 
     <!-- POSTS -->
     <timeline-post *ngFor="let post of posts | async" [post]="post"></timeline-post>
