--- a/src/app/pages/timeline/components/main/main.component.html
+++ b/src/app/pages/timeline/components/main/main.component.html
@@ -2,6 +2,14 @@
     <!-- TEXTBOX FOR NEW POST -->
     <timeline-mypost (createPostRequest)="createPost($event)" *ngIf="isAuthenticated"></timeline-mypost>
 
-    <!-- POSTS -->
+    <!-- POSTS -->    
     <timeline-post *ngFor="let post of posts | async" [post]="post"></timeline-post>
+
+    <div 
+        class="timeline-posts" 
+        infiniteScroll 
+        [infiniteScrollDistance]="2" 
+        infiniteScrollThrottle="50" 
+        (scrolled)="onScroll()"
+    ></div>    
 </div>
