--- a/src/app/pages/timeline/components/post/post.component.html
+++ b/src/app/pages/timeline/components/post/post.component.html
@@ -1,7 +1,7 @@
 <div class="message-item" id="m9">
     <div class="message-inner">
         <div class="message-head clearfix">
-            <div class="avatar pull-left"><a href="./index.php?qa=user&qa_1=amiya"><img src="https://ssl.gstatic.com/accounts/ui/avatar_2x.png"></a></div>
+            <div class="avatar pull-left"><a href="./index.php?qa=user&qa_1=amiya"><img class="profile-img" src="https://ssl.gstatic.com/accounts/ui/avatar_2x.png"></a></div>
             <div class="user-detail">
                 <h5 class="handle">{{ post.title }}</h5>
                 <div class="post-meta">
@@ -18,8 +18,9 @@
                 </div>
             </div>
         </div>
-        <div class="qa-message-content">
-            {{  post.description }}
+        <div class="qa-message-content">            
+            <timeline-post-item [items]="post.items"></timeline-post-item>
         </div>
+        
     </div>
 </div>
