delete post and uploading images post

--- a/src/app/pages/timeline/components/item/item.component.html
+++ b/src/app/pages/timeline/components/item/item.component.html
@@ -1,3 +1,3 @@
 <section id="photos">
-    <img  *ngFor="let item of items" src="{{ item.source }}" alt="pretty kitty">    
+    <img  *ngFor="let item of items" src="{{ item.source }}" alt="{{ item.title }}">    
 </section>  
