--- a/src/app/pages/timeline/components/mypost/mypost.component.css
+++ b/src/app/pages/timeline/components/mypost/mypost.component.css
@@ -20,6 +20,7 @@ body{margin-top:20px; background-color: #eeeeee;}
 .well-social-post a:active,
 .well-social-post a:focus {
     text-decoration: none;
+    cursor: pointer;
 }
 
 .well-social-post .list-inline {
