--- a/src/app/pages/timeline/components/mypost/mypost.component.html
+++ b/src/app/pages/timeline/components/mypost/mypost.component.html
@@ -5,8 +5,7 @@
                 <ul class="list-inline" id='list_PostActions'>
                     <input name="files" accept="image/*" type="file" multiple #uploader (change)="onUploadPictures($event.target.files)" style="display:none"/>
                     <li class='active'><a href='#'>Update status</a></li>
-                    <li><a (click)="uploader.click($event)">Add photos/Video</a></li>
-                    <li><a href='#'>Create photo album</a></li>
+                    <li><a (click)="uploader.click($event)">Add photos</a></li>                    
                 </ul>
                 <textarea 
                     ngModel 
@@ -17,10 +16,12 @@
                     required 
                     minlength="5"
                 ></textarea>
-                <ul class='list-inline post-actions'>
-                    <li><a href="#"><span class="glyphicon glyphicon-camera"></span></a></li>
+                <ul class='list-inline post-actions'>                    
+                    <li><a href="#"><span class="glyphicon glyphicon-picture"></span></a></li>
+                    <!--
                     <li><a href="#" class='glyphicon glyphicon-user'></a></li>
                     <li><a href="#" class='glyphicon glyphicon-map-marker'></a></li>
+                    -->
                     <li class='pull-right'>
                         <button type="submit" class="btn btn-primary" [disabled]="!form.valid">Post</button>
                     </li>
