--- a/src/app/pages/profile/components/content/content.component.html
+++ b/src/app/pages/profile/components/content/content.component.html
@@ -1,3 +1,5 @@
-<div class="profile-content">
-	Some user related content goes here...
- </div>
+<div class="tab-content">
+	<div class="tab-pane fade in active">		
+		<router-outlet></router-outlet>		 
+	</div>
+</div>
