--- a/src/app/pages/profile/components/main/main.component.html
+++ b/src/app/pages/profile/components/main/main.component.html
@@ -1,12 +1,15 @@
-<div class="well">   
-    <div class="row profile">
-		<div class="col-md-3">
-			<profile-sidebar (uploadUserPhoto)="uploadPhoto($event)" [user]="authUser"></profile-sidebar>
-		</div>
-		<div class="col-md-9">
-			<profile-content>
-        		Some user related content goes here...
-      		</profile-content>
+<div class="well">
+    <profile-header [user]="authUser" (uploadUserPhoto)="uploadPhoto($event)"></profile-header>
+	<div class="row">
+		<div class=" col-md-offset-3 col-md-9">
+			<ul class="nav nav-tabs">
+				<li routerLinkActive="active">
+					<a data-toggle="tab" [routerLink]="['post']" #postTabLink>Posts</a>					
+				</li>
+				<li><a data-toggle="tab" href="#menu1">Menu 1</a></li>
+				<li><a data-toggle="tab" href="#menu2">Menu 2</a></li>
+			  </ul>
+			<profile-content></profile-content>
 		</div>
 	</div>
 </div>
