--- a/src/app/pages/profile/components/sidebar/sidebar.component.html
+++ b/src/app/pages/profile/components/sidebar/sidebar.component.html
@@ -24,6 +24,13 @@
 	
 	<div class="profile-usermenu">
 		<ul class="nav">
+			<li>
+				<a [routerLink]="['post']" routerLinkActive="active">
+					<i class="glyphicon glyphicon-home"></i>
+					Posts
+				</a>
+			</li>
+			
 			<li class="active">
 				<a href="#">
 				<i class="glyphicon glyphicon-home"></i>
