--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -21,7 +21,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a routerLink="/timeline">Timeline</a></li>  
-                          <li><a routerLink="/profile/post">My Profile</a></li>
+                          <li><a routerLink="/profile/posts">My Profile</a></li>
                           <li><a style="cursor: pointer;" (click)="onLogout()">Logout</a></li>
                         </ul>                        
                     </li>                    
