--- a/src/app/pages/profile/components/main/main.component.html
+++ b/src/app/pages/profile/components/main/main.component.html
@@ -4,11 +4,11 @@
 		<div class=" col-md-offset-3 col-md-9">
 			<ul class="nav nav-tabs">
 				<li routerLinkActive="active">
-					<a data-toggle="tab" [routerLink]="['post']" #postTabLink>Posts</a>					
+					<a data-toggle="tab" [routerLink]="['posts']" #postTabLink>Posts</a>					
 				</li>
 				<li><a data-toggle="tab" href="#menu1">Menu 1</a></li>
 				<li><a data-toggle="tab" href="#menu2">Menu 2</a></li>
-			  </ul>
+			</ul>
 			<profile-content></profile-content>
 		</div>
 	</div>
