--- a/src/app/pages/profile/components/header/header.component.html
+++ b/src/app/pages/profile/components/header/header.component.html
@@ -1,16 +1,16 @@
 <div class="row">	
 	<div class="col-md-3">			
 		<div class="circle">			
-			<img class="profile-pic" src="{{ user.profile_picture }}">
+			<img *ngIf="user!=null" class="profile-pic" src="{{ user.profile_picture }}">
 		</div>			
-		<div class="p-image">
+		<div *ngIf="authUser!=null && authUser.id == user.id" class="p-image">
 			<a class="change-photo" (click)="uploader.click()"><i class="glyphicon glyphicon-camera"></i></a>
 			<input #uploader class="file-upload" (change)="onChangePhoto($event.target.files)" type="file" accept="image/*"/>			
 		</div>
 	</div>
 
 	<div class="col-md-9">			
-		<div class="profile-head">
+		<div *ngIf="user!=null" class="profile-head">
 			<h3> {{ user.name }}</h3>
 			<h5>Web Developer and Designer</h5>
 		</div>			
