--- a/src/app/pages/profile/components/main/main.component.html
+++ b/src/app/pages/profile/components/main/main.component.html
@@ -1,5 +1,5 @@
 <div class="well">
-    <profile-header [user]="authUser" (uploadUserPhoto)="uploadPhoto($event)"></profile-header>
+    <profile-header [user]="user" [authUser]="authUser" (uploadUserPhoto)="uploadPhoto($event)"></profile-header>
 	<div class="row">
 		<div class=" col-md-offset-3 col-md-9">
 			<ul class="nav nav-tabs">
