--- a/src/app/pages/profile/components/header/header.component.html
+++ b/src/app/pages/profile/components/header/header.component.html
@@ -3,8 +3,8 @@
 		<div class="circle">			
 			<img *ngIf="user!=null" class="profile-pic" src="{{ user.profile_picture }}">
 		</div>			
-		<div *ngIf="authUser!=null && authUser.id == user.id" class="p-image">
-			<a class="change-photo" (click)="uploader.click()"><i class="glyphicon glyphicon-camera"></i></a>
+		<div *ngIf="authUser!=null && user!=null" class="p-image">
+			<a *ngIf="authUser.id == user.id" class="change-photo" (click)="uploader.click()"><i class="glyphicon glyphicon-camera"></i></a>
 			<input #uploader class="file-upload" (change)="onChangePhoto($event.target.files)" type="file" accept="image/*"/>			
 		</div>
 	</div>
