--- a/src/app/pages/profile/components/posts/posts.component.html
+++ b/src/app/pages/profile/components/posts/posts.component.html
@@ -1,4 +1,4 @@
-<timeline-post *ngFor="let post of posts | async" [user]="user" [post]="post" (uploadPhotosRequest)="uploadPhotos($event)"></timeline-post>
+<timeline-post *ngFor="let post of posts | async" [user]="authUser" [post]="post" (uploadPhotosRequest)="uploadPhotos($event)"></timeline-post>
 
 <div 
     class="timeline-posts" 
