--- a/src/app/pages/profile/components/sidebar/sidebar.component.html
+++ b/src/app/pages/profile/components/sidebar/sidebar.component.html
@@ -1,56 +1,10 @@
-<div class="profile-sidebar">
-
-	<input type="file" #uploader (change)="onChangePhoto($event.target.files)" style="display:none"/>
-	<a (click)="uploader.click()" class="profile-pic">
-		<div class="profile-pic" [ngStyle]="{'background-image': getProfilePhotoUrl()}" >
-			<span class="glyphicon glyphicon-camera"></span>
-			<span>Change Image</span>
+<div *ngIf="user!=null" class="profile-sidebar well">
+	<div class="row">
+		<div class="col-md-12">
+			<strong>Created at: </strong> {{ user.created_at }}
 		</div>
-	  </a>
-	
-	<div class="profile-usertitle">
-		<div class="profile-usertitle-name">
-			{{ user.name }}
+		<div *ngIf="user.gender!=null" class="col-md-12">
+			<strong>Gender: </strong> {{ user.gender}}
 		</div>
-		<div class="profile-usertitle-job">
-			Developer
-		</div>
-	</div>
-	
-	<div class="profile-userbuttons">
-		<button type="button" class="btn btn-success btn-sm">Follow</button>
-		<button type="button" class="btn btn-danger btn-sm">Message</button>
-	</div>
-	
-	<div class="profile-usermenu">
-		<ul class="nav">
-			<li>
-				<a [routerLink]="['post']" routerLinkActive="active">
-					<i class="glyphicon glyphicon-home"></i>
-					Posts
-				</a>
-			</li>
-			
-			<li class="active">
-				<a href="#">
-				<i class="glyphicon glyphicon-home"></i>
-				Overview </a>
-			</li>
-			<li>
-				<a href="#">
-				<i class="glyphicon glyphicon-user"></i>
-				Account Settings </a>
-			</li>
-			<li>
-				<a href="#" target="_blank">
-				<i class="glyphicon glyphicon-ok"></i>
-				Tasks </a>
-			</li>
-			<li>
-				<a href="#">
-				<i class="glyphicon glyphicon-flag"></i>
-				Help </a>
-			</li>
-		</ul>
 	</div>	
 </div>
