--- a/src/app/pages/profile/components/header/header.component.html
+++ b/src/app/pages/profile/components/header/header.component.html
@@ -12,7 +12,7 @@
 	<div class="col-md-9">			
 		<div *ngIf="user!=null" class="profile-head">
 			<h3> {{ user.name }}</h3>
-			<h5>Web Developer and Designer</h5>
+			<h5 *ngIf="user.profession!=null"> {{ user.profession }}</h5>
 		</div>			
 	</div>
 </div>
