--- a/src/app/pages/profile/components/main/main.component.html
+++ b/src/app/pages/profile/components/main/main.component.html
@@ -1,7 +1,10 @@
 <div class="well">
     <profile-header [user]="user" [authUser]="authUser" (uploadUserPhoto)="uploadPhoto($event)"></profile-header>
 	<div class="row">
-		<div class=" col-md-offset-3 col-md-9">
+		<div class="col-md-3">
+			<profile-sidebar [user]="user"></profile-sidebar>
+		</div>
+		<div class="col-md-9">
 			<ul class="nav nav-tabs">
 				<li routerLinkActive="active">
 					<a data-toggle="tab" [routerLink]="['posts']" #postTabLink>Posts</a>					
