--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -22,6 +22,7 @@
                         <ul class="dropdown-menu">
                             <li><a routerLink="/timeline">Timeline</a></li>  
                           <li><a routerLink="/profile/7/posts">My Profile</a></li>
+                          <li><a routerLink="/update-profile">Edit Profile</a></li>
                           <li><a style="cursor: pointer;" (click)="onLogout()">Logout</a></li>
                         </ul>                        
                     </li>                    
