--- a/src/app/pages/profile/components/header/header.component.html
+++ b/src/app/pages/profile/components/header/header.component.html
@@ -1,18 +1,19 @@
-<div class="row">	
+<div class="row header">	
 	<div class="col-md-3">			
 		<div class="circle">			
 			<img *ngIf="user!=null" class="profile-pic" src="{{ user.profile_picture }}">			
-		</div>			
-		<div *ngIf="authUser!=null && user!=null" class="p-image">
-			<a *ngIf="authUser.id == user.id" class="change-photo" (click)="uploader.click()"><i class="glyphicon glyphicon-camera"></i></a>
-			<input #uploader class="file-upload" (change)="onChangePhoto($event.target.files)" type="file" accept="image/*"/>			
-		</div>
+		</div>		
 	</div>
 
 	<div class="col-md-9">			
 		<div *ngIf="user!=null" class="profile-head">
 			<h3> {{ user.name }}</h3>
 			<h5 *ngIf="user.profession!=null"> {{ user.profession }}</h5>
-		</div>			
+		</div>	
+		<div *ngIf="authUser!=null && authUser.id == user.id" class="row clearfix">
+			<div class="col-md-12">
+				<a routerLink="/update-profile" class="btn btn-primary" role="button">Edit Profile</a>
+			</div>
+		</div>		
 	</div>
 </div>
