--- a/src/app/pages/profile/components/posts/posts.component.html
+++ b/src/app/pages/profile/components/posts/posts.component.html
@@ -1,5 +1,9 @@
 <timeline-post *ngFor="let post of posts | async" [user]="authUser" [post]="post" (removePostId)="removePost($event)" (uploadPhotosRequest)="uploadPhotos($event)"></timeline-post>
 
+<div *ngIf="(posts | async)?.length==0"class="alert alert-info">
+    <strong>Sorry!</strong> No Record Found.
+</div>
+
 <div 
     class="timeline-posts" 
     infiniteScroll 
