--- a/src/app/pages/profile/components/header/header.component.html
+++ b/src/app/pages/profile/components/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="row header">	
 	<div class="col-md-3">			
 		<div class="circle">			
-			<img *ngIf="user!=null" class="profile-pic" src="{{ user.profile_picture }}">			
+			<img *ngIf="user!=null" class="profile-pic" src="{{ basePath+user.profile_picture }}">			
 		</div>		
 	</div>
 
