--- a/src/shared/components/user-post/item/item.component.html
+++ b/src/shared/components/user-post/item/item.component.html
@@ -1,3 +1,3 @@
 <section id="photos">
-    <img  *ngFor="let item of items" src="{{ item.source }}" alt="{{ item.title }}">    
+    <img  *ngFor="let item of items" src="{{ basePath+item.source }}" alt="{{ item.title }}">    
 </section>  
